--- a/GUI/EXPERIMENTAL/Main.ui
+++ b/GUI/EXPERIMENTAL/Main.ui
@@ -2,29 +2,32 @@
 <interface version="1.1">
   <object class="tk.Toplevel" id="toplevel0">
     <property name="cursor">arrow</property>
-    <property name="geometry">800x480</property>
+    <property name="geometry">800x600</property>
+    <property name="height">300</property>
     <property name="highlightbackground">#c8797b</property>
-    <property name="minsize">800|400</property>
+    <property name="minsize">800|600</property>
     <property name="relief">flat</property>
-    <property name="resizable">vertically</property>
+    <property name="resizable">both</property>
     <property name="title" translatable="yes">PDBaser - GUI</property>
+    <property name="width">200</property>
     <child>
       <object class="ttk.Frame" id="frame0">
+        <property name="height">200</property>
         <property name="padding">5</property>
         <layout manager="grid">
           <property name="column">0</property>
-          <property name="columnspan">10</property>
+          <property name="columnspan">13</property>
           <property name="ipadx">0</property>
           <property name="ipady">0</property>
           <property name="padx">10</property>
           <property name="pady">10</property>
-          <property name="propagate">True</property>
+          <property name="propagate">False</property>
           <property name="row">0</property>
-          <property name="rowspan">6</property>
+          <property name="rowspan">10</property>
           <property name="sticky">nsew</property>
           <property type="col" id="0" name="minsize">0</property>
           <property type="col" id="0" name="weight">8</property>
-          <property type="row" id="0" name="minsize">150</property>
+          <property type="row" id="0" name="minsize">0</property>
           <property type="row" id="0" name="pad">10</property>
           <property type="row" id="0" name="weight">12</property>
         </layout>
@@ -37,9 +40,10 @@
               <property name="columnspan">3</property>
               <property name="propagate">True</property>
               <property name="row">0</property>
-              <property type="col" id="0" name="minsize">180</property>
+              <property name="rowspan">1</property>
+              <property type="col" id="0" name="minsize">0</property>
               <property type="col" id="0" name="pad">0</property>
-              <property type="col" id="0" name="weight">10</property>
+              <property type="col" id="0" name="weight">8</property>
             </layout>
           </object>
         </child>
@@ -57,16 +61,14 @@
               <property name="ipadx">50</property>
               <property name="ipady">100</property>
               <property name="padx">5</property>
-              <property name="propagate">True</property>
+              <property name="propagate">False</property>
               <property name="row">1</property>
-              <property name="rowspan">6</property>
+              <property name="rowspan">4</property>
               <property name="sticky">nsew</property>
-              <property type="col" id="0" name="minsize">180</property>
+              <property type="col" id="0" name="minsize">0</property>
               <property type="col" id="0" name="pad">0</property>
-              <property type="col" id="0" name="weight">10</property>
+              <property type="col" id="0" name="weight">8</property>
               <property type="row" id="1" name="minsize">0</property>
-              <property type="row" id="1" name="pad">10</property>
-              <property type="row" id="1" name="weight">10</property>
             </layout>
           </object>
         </child>
@@ -77,13 +79,12 @@
               <property name="column">0</property>
               <property name="propagate">True</property>
               <property name="row">1</property>
+              <property name="rowspan">4</property>
               <property name="sticky">nse</property>
-              <property type="col" id="0" name="minsize">180</property>
+              <property type="col" id="0" name="minsize">0</property>
               <property type="col" id="0" name="pad">0</property>
-              <property type="col" id="0" name="weight">10</property>
+              <property type="col" id="0" name="weight">8</property>
               <property type="row" id="1" name="minsize">0</property>
-              <property type="row" id="1" name="pad">10</property>
-              <property type="row" id="1" name="weight">10</property>
             </layout>
           </object>
         </child>
@@ -96,8 +97,9 @@
               <property name="columnspan">3</property>
               <property name="propagate">True</property>
               <property name="row">0</property>
-              <property type="col" id="4" name="minsize">180</property>
-              <property type="col" id="4" name="weight">10</property>
+              <property name="rowspan">1</property>
+              <property type="col" id="4" name="minsize">0</property>
+              <property type="col" id="4" name="weight">8</property>
             </layout>
           </object>
         </child>
@@ -114,15 +116,14 @@
               <property name="columnspan">3</property>
               <property name="ipadx">50</property>
               <property name="ipady">100</property>
-              <property name="propagate">True</property>
+              <property name="padx">5</property>
+              <property name="propagate">False</property>
               <property name="row">1</property>
-              <property name="rowspan">6</property>
+              <property name="rowspan">4</property>
               <property name="sticky">nsew</property>
-              <property type="col" id="4" name="minsize">180</property>
-              <property type="col" id="4" name="weight">10</property>
+              <property type="col" id="4" name="minsize">0</property>
+              <property type="col" id="4" name="weight">8</property>
               <property type="row" id="1" name="minsize">0</property>
-              <property type="row" id="1" name="pad">10</property>
-              <property type="row" id="1" name="weight">10</property>
             </layout>
           </object>
         </child>
@@ -133,10 +134,11 @@
               <property name="column">4</property>
               <property name="propagate">True</property>
               <property name="row">1</property>
+              <property name="rowspan">4</property>
               <property name="sticky">nse</property>
+              <property type="col" id="4" name="minsize">0</property>
+              <property type="col" id="4" name="weight">8</property>
               <property type="row" id="1" name="minsize">0</property>
-              <property type="row" id="1" name="pad">10</property>
-              <property type="row" id="1" name="weight">10</property>
             </layout>
           </object>
         </child>
@@ -149,8 +151,9 @@
               <property name="columnspan">3</property>
               <property name="propagate">True</property>
               <property name="row">0</property>
-              <property type="col" id="8" name="minsize">180</property>
-              <property type="col" id="8" name="weight">10</property>
+              <property name="rowspan">1</property>
+              <property type="col" id="8" name="minsize">0</property>
+              <property type="col" id="8" name="weight">8</property>
             </layout>
           </object>
         </child>
@@ -160,6 +163,7 @@
             <property name="exportselection">false</property>
             <property name="font">{Helvetica} 12 {}</property>
             <property name="selectmode">extended</property>
+            <property name="state">normal</property>
             <property name="takefocus">false</property>
             <bind sequence="&lt;&lt;ListboxSelect&gt;&gt;" handler="On_ResidueSelectionChanged" add="" />
             <layout manager="grid">
@@ -168,15 +172,13 @@
               <property name="ipadx">50</property>
               <property name="ipady">100</property>
               <property name="padx">5</property>
-              <property name="propagate">True</property>
+              <property name="propagate">False</property>
               <property name="row">1</property>
-              <property name="rowspan">6</property>
+              <property name="rowspan">4</property>
               <property name="sticky">nsew</property>
-              <property type="col" id="8" name="minsize">180</property>
-              <property type="col" id="8" name="weight">10</property>
+              <property type="col" id="8" name="minsize">0</property>
+              <property type="col" id="8" name="weight">8</property>
               <property type="row" id="1" name="minsize">0</property>
-              <property type="row" id="1" name="pad">10</property>
-              <property type="row" id="1" name="weight">10</property>
             </layout>
           </object>
         </child>
@@ -187,10 +189,11 @@
               <property name="column">8</property>
               <property name="propagate">True</property>
               <property name="row">1</property>
+              <property name="rowspan">4</property>
               <property name="sticky">nse</property>
+              <property type="col" id="8" name="minsize">0</property>
+              <property type="col" id="8" name="weight">8</property>
               <property type="row" id="1" name="minsize">0</property>
-              <property type="row" id="1" name="pad">10</property>
-              <property type="row" id="1" name="weight">10</property>
             </layout>
           </object>
         </child>
@@ -202,7 +205,7 @@
               <property name="padx">20</property>
               <property name="propagate">True</property>
               <property name="row">0</property>
-              <property name="rowspan">7</property>
+              <property name="rowspan">4</property>
               <property name="sticky">ns</property>
             </layout>
           </object>
@@ -215,7 +218,7 @@
               <property name="padx">20</property>
               <property name="propagate">True</property>
               <property name="row">0</property>
-              <property name="rowspan">7</property>
+              <property name="rowspan">4</property>
               <property name="sticky">ns</property>
             </layout>
           </object>
@@ -227,13 +230,16 @@
             <layout manager="grid">
               <property name="column">0</property>
               <property name="columnspan">10</property>
-              <property name="propagate">True</property>
-              <property name="row">9</property>
-              <property name="rowspan">1</property>
-              <property name="sticky">sew</property>
-              <property type="col" id="0" name="minsize">180</property>
+              <property name="propagate">False</property>
+              <property name="row">5</property>
+              <property name="rowspan">5</property>
+              <property name="sticky">nsew</property>
+              <property type="col" id="0" name="minsize">0</property>
               <property type="col" id="0" name="pad">0</property>
-              <property type="col" id="0" name="weight">10</property>
+              <property type="col" id="0" name="weight">8</property>
+              <property type="row" id="7" name="minsize">50</property>
+              <property type="row" id="7" name="pad">0</property>
+              <property type="row" id="7" name="weight">8</property>
             </layout>
             <child>
               <object class="ttk.Label" id="FindLabel">
@@ -296,10 +302,10 @@
           <property name="columnspan">10</property>
           <property name="padx">10</property>
           <property name="pady">10</property>
-          <property name="propagate">True</property>
-          <property name="row">6</property>
-          <property name="rowspan">2</property>
-          <property name="sticky">sew</property>
+          <property name="propagate">False</property>
+          <property name="row">8</property>
+          <property name="rowspan">1</property>
+          <property name="sticky">nsew</property>
           <property type="col" id="0" name="minsize">0</property>
           <property type="col" id="0" name="weight">8</property>
           <property type="row" id="1" name="weight">0</property>
