--- a/GUI/EXPERIMENTAL/Main.ui
+++ b/GUI/EXPERIMENTAL/Main.ui
@@ -4,21 +4,20 @@
     <property name="cursor">arrow</property>
     <property name="height">0</property>
     <property name="highlightbackground">#c8797b</property>
-    <property name="minsize">1050|660</property>
+    <property name="minsize">900|540</property>
     <property name="relief">flat</property>
-    <property name="resizable">horizontally</property>
+    <property name="resizable">none</property>
     <property name="title" translatable="yes">PDBaser - GUI</property>
     <property name="width">0</property>
     <child>
       <object class="ttk.Frame" id="frame0">
-        <property name="height">100</property>
+        <property name="height">0</property>
         <property name="padding">5</property>
         <property name="width">900</property>
         <layout manager="grid">
           <property name="column">0</property>
           <property name="columnspan">16</property>
           <property name="ipadx">0</property>
-          <property name="ipady">0</property>
           <property name="padx">10</property>
           <property name="pady">10</property>
           <property name="propagate">False</property>
@@ -27,7 +26,7 @@
           <property name="sticky">nsew</property>
           <property type="col" id="0" name="minsize">0</property>
           <property type="col" id="0" name="weight">0</property>
-          <property type="row" id="0" name="minsize">250</property>
+          <property type="row" id="0" name="minsize">170</property>
           <property type="row" id="0" name="pad">0</property>
           <property type="row" id="0" name="weight">0</property>
         </layout>
@@ -61,8 +60,6 @@
             <layout manager="grid">
               <property name="column">0</property>
               <property name="columnspan">2</property>
-              <property name="ipady">0</property>
-              <property name="padx">5</property>
               <property name="propagate">False</property>
               <property name="row">1</property>
               <property name="rowspan">5</property>
@@ -99,7 +96,7 @@
             <layout manager="grid">
               <property name="column">3</property>
               <property name="columnspan">1</property>
-              <property name="padx">20</property>
+              <property name="padx">5</property>
               <property name="propagate">False</property>
               <property name="row">0</property>
               <property name="rowspan">6</property>
@@ -117,7 +114,6 @@
               <property name="propagate">False</property>
               <property name="row">0</property>
               <property name="rowspan">1</property>
-              <property name="sticky">e</property>
               <property type="col" id="4" name="minsize">0</property>
               <property type="col" id="4" name="weight">0</property>
             </layout>
@@ -135,9 +131,8 @@
             <bind sequence="&lt;&lt;ListboxSelect&gt;&gt;" handler="On_ChainSelectionChanged" add="" />
             <layout manager="grid">
               <property name="column">4</property>
-              <property name="columnspan">2</property>
-              <property name="ipady">100</property>
-              <property name="padx">5</property>
+              <property name="columnspan">1</property>
+              <property name="ipady">0</property>
               <property name="propagate">False</property>
               <property name="row">1</property>
               <property name="rowspan">5</property>
@@ -153,7 +148,7 @@
             <property name="orient">vertical</property>
             <layout manager="grid">
               <property name="column">4</property>
-              <property name="columnspan">2</property>
+              <property name="columnspan">1</property>
               <property name="propagate">False</property>
               <property name="row">1</property>
               <property name="rowspan">5</property>
@@ -170,7 +165,7 @@
             <layout manager="grid">
               <property name="column">7</property>
               <property name="columnspan">1</property>
-              <property name="padx">20</property>
+              <property name="padx">5</property>
               <property name="propagate">False</property>
               <property name="row">0</property>
               <property name="rowspan">6</property>
@@ -206,8 +201,7 @@
             <layout manager="grid">
               <property name="column">8</property>
               <property name="columnspan">2</property>
-              <property name="ipady">50</property>
-              <property name="padx">5</property>
+              <property name="ipady">65</property>
               <property name="propagate">False</property>
               <property name="row">1</property>
               <property name="rowspan">5</property>
@@ -271,25 +265,6 @@
           </object>
         </child>
         <child>
-          <object class="ttk.Separator" id="separator1">
-            <property name="orient">horizontal</property>
-            <layout manager="grid">
-              <property name="column">0</property>
-              <property name="columnspan">16</property>
-              <property name="padx">5</property>
-              <property name="pady">5</property>
-              <property name="propagate">False</property>
-              <property name="row">8</property>
-              <property name="rowspan">1</property>
-              <property name="sticky">ew</property>
-              <property type="col" id="0" name="minsize">0</property>
-              <property type="col" id="0" name="pad">0</property>
-              <property type="col" id="0" name="uniform" />
-              <property type="col" id="0" name="weight">0</property>
-            </layout>
-          </object>
-        </child>
-        <child>
           <object class="ttk.Label" id="Depiction">
             <property name="anchor">w</property>
             <property name="background">#ffffff</property>
@@ -297,7 +272,7 @@
             <property name="relief">flat</property>
             <property name="takefocus">false</property>
             <layout manager="grid">
-              <property name="column">13</property>
+              <property name="column">12</property>
               <property name="columnspan">1</property>
               <property name="ipadx">0</property>
               <property name="padx">5</property>
@@ -305,7 +280,7 @@
               <property name="row">1</property>
               <property name="rowspan">5</property>
               <property name="sticky">nsew</property>
-              <property type="col" id="12" name="weight">8</property>
+              <property type="col" id="12" name="weight">0</property>
               <property type="col" id="13" name="weight">0</property>
               <property type="row" id="1" name="minsize">0</property>
             </layout>
@@ -315,23 +290,22 @@
     </child>
     <child>
       <object class="ttk.Frame" id="frame1">
-        <property name="height">50</property>
-        <property name="width">800</property>
+        <property name="height">0</property>
         <layout manager="grid">
           <property name="column">0</property>
           <property name="columnspan">10</property>
-          <property name="ipady">5</property>
+          <property name="ipady">60</property>
           <property name="padx">10</property>
           <property name="pady">10</property>
           <property name="propagate">False</property>
           <property name="row">11</property>
           <property name="rowspan">5</property>
-          <property name="sticky">nsew</property>
+          <property name="sticky">new</property>
           <property type="col" id="0" name="minsize">0</property>
           <property type="col" id="0" name="weight">0</property>
           <property type="row" id="1" name="weight">0</property>
           <property type="row" id="10" name="minsize">80</property>
-          <property type="row" id="11" name="minsize">150</property>
+          <property type="row" id="11" name="minsize">0</property>
           <property type="row" id="6" name="minsize">80</property>
           <property type="row" id="6" name="weight">1</property>
           <property type="row" id="8" name="minsize">80</property>
